# theitaliangame

./: .gitignore  CMakeLists.txt  README.md  aimodel.cpp  aimodel.h  baizescene.cpp  baizescene.h  baizeview.cpp  baizeview.h  card.cpp  card.h  carddeck.cpp  carddeck.h  cardgroup.cpp  cardgroup.h  cardhand.cpp  cardhand.h  cardimages.cpp  cardimages.h  logicalmodel.cpp  logicalmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  selectcardmenu.cpp  selectcardmenu.h  theitaliangame.pro  utils.cpp  utils.h
